--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ html
     title #{title} - Hackathon Starter
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='/css/groups.css')
 
   body
     include partials/header
