--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -19,6 +19,8 @@
           a(href='/contact') Contact
         li
           a(href='/status') Status
+        li
+          a(href='/groups') Groups
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
