--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -3,6 +3,6 @@ footer
     p.pull-left © 2017 Company, Inc. All Rights Reserved
     ul.pull-right.list-inline
       li
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+        a(href='/about') About
       li
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='/contact') Contact
