--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
       include partials/flash
       block content
 
-    include partials/footer
+    //- include partials/footer
 
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
