--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html
 
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
-    script(src='/js/main.js')
+    script(src='/dist/main.js')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
