--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,10 +18,11 @@ html
       include partials/flash
       block content
 
+    div#root
     //- include partials/footer
 
-    script(src='/js/lib/jquery-3.1.1.min.js')
-    script(src='/js/lib/bootstrap.min.js')
+    //- script(src='/js/lib/jquery-3.1.1.min.js')
+    //- script(src='/js/lib/bootstrap.min.js')
     script(src='/dist/main.js')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
