--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,18 +14,20 @@ html
   body
     include partials/header
 
+    #root
+    #app
+      
     .container
       include partials/flash
       block content
 
-    div#root
     //- include partials/footer
 
-    //- script(src='/js/lib/jquery-3.1.1.min.js')
-    //- script(src='/js/lib/bootstrap.min.js')
+    script(src='/js/lib/jquery-3.1.1.min.js')
+    script(src='/js/lib/bootstrap.min.js')
     script(src='/dist/main.js')
 
-    // Google Analytics: change UA-XXXXX-X to be your site's ID
+    //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
