--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -14,8 +14,19 @@ html {
 }
 
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  background-color: #f2f3f5;
+  margin: 0;
+  color: #34495e;
   padding-top: 60px;
   margin-bottom: 75px;
+  overflow-y: scroll;
+}
+
+a {
+  color: #34495e;
+  text-decoration: none;
 }
 
 footer {
