remove jquery datepicker

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
     title #{title} - Hackathon Starter
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
-    link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
+    //- link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 
   body
     include partials/header
@@ -22,12 +22,12 @@ html
 
     //- include partials/footer
     
-    //- script(src='/js/lib/jquery-3.1.1.min.js')
-    //- script(src='/js/lib/bootstrap.min.js')
-
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    //- script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    //- script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
+    //- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    
+    script(src='/js/lib/jquery-3.1.1.min.js')
+    script(src='/js/lib/bootstrap.min.js')
     script(src='/dist/main.js')
 
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
