--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,17 @@
 doctype html
 html
   head
+    title #{title} - Hackathon Starter
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='mobile-web-app-capable', content='yes')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
-    title #{title} - Hackathon Starter
+    //- meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui')
+    //- meta(name='theme-color', content='#f60')
+    //- link(rel='shortcut icon', sizes='48x48', href='/public/logo-48.png')
+    //- link(rel='manifest', href='/manifest.json')      
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
     //- link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
@@ -15,9 +20,9 @@ html
     include partials/header
 
     .container
-      #app
       include partials/flash
       block content
+      <!--vue-ssr-outlet-->
 
     //- include partials/footer
     
@@ -27,7 +32,7 @@ html
     
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
-    script(src='/dist/app.js')
+    //- script(src='/dist/app.js')
 
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
