fix vue ssr, remove beforeMount because it duplicate async data

--- a/views/groups.pug
+++ b/views/groups.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  #app
+  
   //- #groups
   //-   header.header
   //-     nav.inner
@@ -17,3 +19,5 @@ block content
   //-             span.score= i+1
   //-             span.title
   //-               a(href="http://facebook.com/" + group.id, target='_blank', rel='noopener')= group.name
+
+  script(src='/dist/app.js')
