--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,11 +10,10 @@ html
     meta(name='csrf-token', content=_csrf)
     //- meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui')
     //- meta(name='theme-color', content='#f60')
-    //- link(rel='shortcut icon', sizes='48x48', href='/public/logo-48.png')
-    //- link(rel='manifest', href='/manifest.json')      
+    link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
+    link(rel='manifest', href='/manifest.json')
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
-    //- link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 
   body
     include partials/header
@@ -25,14 +24,9 @@ html
       <!--vue-ssr-outlet-->
 
     //- include partials/footer
-    
-    //- script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-    //- script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
-    //- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-    
+        
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
-    //- script(src='/dist/app.js')
 
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
