--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -21,6 +21,8 @@
           a(href='/status') Status
         li
           a(href='/groups') Groups
+        li
+          a(href='/likes') Likes
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
