--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -23,6 +23,10 @@
           a(href='/groups') Groups
         li
           a(href='/likes') Likes
+        li
+          a(href='/feeds') Feeds
+        li
+          a(href='/friends') Friends
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
