--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,7 +27,7 @@ html
         
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
-
+    script(src='/js/main.js')
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
