--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,8 +8,17 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
+      
+    //- meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui')
+    meta(name='mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style', content='black')
+      
     //- meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui')
     //- meta(name='theme-color', content='#f60')
+    
+    link(rel='icon', href='/logo/logo-48.png')
+    link(rel='apple-touch-icon', href='/logo/logo-48.png')
     link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
     link(rel='manifest', href='/manifest.json')
     link(rel='shortcut icon', href='/favicon.png')
