infinite loading fro groups :D

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,7 @@ html
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
+    meta(name='format-detection', content='telephone=no')
       
     //- meta(name='theme-color', content='#f60')
     
