--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8913,8 +8913,7 @@ body {
   margin: 0;
   color: #34495e;
   margin-bottom: 75px;
-  overflow-y: scroll;
-  padding-top: 60px; }
+  overflow-y: scroll; }
 
 a {
   color: #34495e;
