webpack chunkhash js file

--- a/views/home.pug
+++ b/views/home.pug
@@ -27,4 +27,4 @@ block content
         a.btn.btn-default(href='#', role='button') View details »
 
   #app
-  script(src='/dist/app.js')
+  //- script(src='/dist/app.js')
