--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -23,6 +23,8 @@
           a(href='/groups') Groups
         li
           a(href='/likes') Likes
+        li
+          a(href='/pages') Pages
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
