--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1139,7 +1139,7 @@ hr {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", Arial, sans-serif;
+  /*font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", Arial, sans-serif;*/
   font-weight: 500;
   line-height: 1.1;
   color: inherit; }
@@ -1517,7 +1517,7 @@ pre {
       width: 970px; } }
   @media (min-width: 1200px) {
     .container {
-      width: 1170px; } }
+      width: 830px; } }
 
 .container-fluid {
   margin-right: auto;
