--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .page-header
-    h3 Contact Form
+    h3 Contact Us
 
   form.form-horizontal(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
