--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,22 +8,22 @@
         span.icon-bar
       a.navbar-brand(href='/')
         i.fa.fa-cube
-        | Project name
+        | Cube
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=(title == 'Home') ? 'active' : undefined)
+        //-li(class=(title == 'Home') ? 'active' : undefined)
           a(href='/') Home
-        li(class=(title == 'API Examples') ? 'active' : undefined)
+        //-li(class=(title == 'API Examples') ? 'active' : undefined)
           a(href='/api') API Examples
-        li(class=(title == 'Contact') ? 'active' : undefined)
+        //-li(class=(title == 'Contact') ? 'active' : undefined)
           a(href='/contact') Contact
-        li
+        //-li
           a(href='/status') Status
-        li(class=(title == 'Groups') ? 'active' : undefined)
+        //-li(class=(title == 'Groups') ? 'active' : undefined)
           a(href='/groups') Groups
-        li(class=(title == 'Likes') ? 'active' : undefined)
+        //-li(class=(title == 'Likes') ? 'active' : undefined)
           a(href='/likes') Likes
-        li(class=(title == 'Pages') ? 'active' : undefined)
+        //-li(class=(title == 'Pages') ? 'active' : undefined)
           a(href='/pages') Pages
       ul.nav.navbar-nav.navbar-right
         if !user
@@ -39,6 +39,7 @@
               else
                 img(src=user.gravatar(60))
               span= user.profile.name || user.email || user.id
+              span= ' '
               i.caret
             ul.dropdown-menu
               li
