--- a/views/layout.pug
+++ b/views/layout.pug
@@ -46,3 +46,30 @@ html
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
+
+    //-script.
+      window.$crisp=[];window.CRISP_WEBSITE_ID="d5148d8e-4c07-4e34-8e88-429631222e9e";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
+
+    //-script.
+      var facebookPageId = "mr.r4nd0m";
+    //-script(type='text/javascript', src='https://messengerify.me/api/chat-head/embed.js')
+
+    //-script.
+      window.fbAsyncInit = function() {
+      FB.init({
+      appId      : '95100348886',
+      xfbml      : true,
+      version    : 'v2.6'
+      });
+      };
+      (function(d, s, id){
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
+    //-.fb-page(data-href='https://www.facebook.com/mimi.bikini/', data-tabs='messages', data-width='400', data-height='300', data-small-header='true')
+      .fb-xfbml-parse-ignore
+        blockquote
