--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -11,7 +11,7 @@
         | cube
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        //-li(class=(title == 'Home') ? 'active' : undefined)
+        li(class=(title == 'Home') ? 'active' : undefined)
           a(href='/') Home
         //-li(class=(title == 'API Examples') ? 'active' : undefined)
           a(href='/api') API Examples
@@ -19,12 +19,12 @@
           a(href='/contact') Contact
         //-li
           a(href='/status') Status
-        //-li(class=(title == 'Groups') ? 'active' : undefined)
+        li(class=(title == 'Groups') ? 'active' : undefined)
           a(href='/groups') Groups
-        //-li(class=(title == 'Likes') ? 'active' : undefined)
-          a(href='/likes') Likes
-        //-li(class=(title == 'Pages') ? 'active' : undefined)
+        li(class=(title == 'Pages') ? 'active' : undefined)
           a(href='/pages') Pages
+        //- li(class=(title == 'Likes') ? 'active' : undefined)
+          a(href='/likes') Likes
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
