--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,10 +22,10 @@ html
     link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
     link(rel='manifest', href='/manifest.json')
     link(rel='shortcut icon', href='/favicon.png')
-    link(rel='stylesheet', href='/css/main.css')
+    //- link(rel='stylesheet', href='/css/main.css')
 
   body
-    include partials/header
+    //- include partials/header
 
     .container
       include partials/flash
@@ -34,8 +34,8 @@ html
 
     //- include partials/footer
         
-    script(src='/js/lib/jquery-3.1.1.min.js')
-    script(src='/js/lib/bootstrap.min.js')
+    //- script(src='/js/lib/jquery-3.1.1.min.js')
+    //- script(src='/js/lib/bootstrap.min.js')
     //- script(src='/js/main.js')
     
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
