--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,15 +22,18 @@ html
     link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
     link(rel='manifest', href='/manifest.json')
     link(rel='shortcut icon', href='/favicon.png')
+    
     //- link(rel='stylesheet', href='/css/main.css')
+
+    link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
+    link(rel='stylesheet', href='/css/vuetify.min.css')
 
   body
     //- include partials/header
 
-    .container
-      include partials/flash
-      block content
-      <!--vue-ssr-outlet-->
+    include partials/flash
+    block content
+    <!--vue-ssr-outlet-->
 
     //- include partials/footer
         
