--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,13 +17,14 @@ html
       
     //- meta(name='theme-color', content='#f60')
     
-    link(rel='icon', href='/logo/logo-120.png')
-    link(rel='apple-touch-icon', href='/logo/logo-120.png')
-    link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
-    link(rel='manifest', href='/manifest.json')
-    link(rel='shortcut icon', href='/favicon.png')
-    
+    //- link(rel='icon', href='/logo/logo-120.png')
+    //- link(rel='apple-touch-icon', href='/logo/logo-120.png')
+    //- link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
+    //- link(rel='shortcut icon', href='/favicon.png')
+    //- link(rel='manifest', href='/manifest.json')    
     //- link(rel='stylesheet', href='/css/main.css')
+    
+    link(rel='shortcut icon', href='data:image/x-icon')
 
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
     link(rel='stylesheet', href='/css/vuetify.min.css')
