--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,11 +20,11 @@ html
     //- link(rel='icon', href='/logo/logo-120.png')
     //- link(rel='apple-touch-icon', href='/logo/logo-120.png')
     //- link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
-    //- link(rel='shortcut icon', href='/favicon.png')
-    //- link(rel='manifest', href='/manifest.json')    
+    //- link(rel='manifest', href='/manifest.json')
     //- link(rel='stylesheet', href='/css/main.css')
     
-    link(rel='shortcut icon', href='data:image/x-icon')
+    //- link(rel='shortcut icon', href='http://www.favicon.cc/favicon/886/702/favicon.png')
+    link(rel='shortcut icon', id="ico")
 
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
     link(rel='stylesheet', href='/css/vuetify.min.css')
@@ -40,7 +40,6 @@ html
         
     //- script(src='/js/lib/jquery-3.1.1.min.js')
     //- script(src='/js/lib/bootstrap.min.js')
-    //- script(src='/js/main.js')
     
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
