--- a/client/app.styl
+++ b/client/app.styl
@@ -1,3 +1,17 @@
+@import '../node_modules/vuetify/src/stylus/settings/_colors'
+
+$theme := {
+  primary: $red.darken-2
+  accent: $red.accent-2
+  secondary: $grey.lighten-1
+  info: $blue.lighten-1
+  warning: $amber.darken-2
+  error: $red.accent-4
+  success: $green.lighten-2
+}
+
+@import '../node_modules/vuetify/src/stylus/main'
+
 body
   font-family -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif
   text-rendering optimizeLegibility
