--- a/client/app.styl
+++ b/client/app.styl
@@ -1,7 +1,7 @@
 @import '../node_modules/vuetify/src/stylus/settings/_colors'
 
 $theme := {
-  primary: $red.darken-2
+  primary: $grey.darken-4
   accent: $red.accent-2
   secondary: $grey.lighten-1
   info: $blue.lighten-1
