--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,7 +27,8 @@ html
     link(rel='shortcut icon', id="ico")
     
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
-  
+    
+    style {{ rules }}
   body
     //- include partials/header
 
