--- a/client/app.styl
+++ b/client/app.styl
@@ -19,7 +19,7 @@
 body
   font-family -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif
   text-rendering optimizeLegibility
-  font-size $font-size-root
+  font-size 14px
   background-color lighten(#eceef1, 30%)
   margin 0
   height 100vh
