--- a/client/app.styl
+++ b/client/app.styl
@@ -24,6 +24,7 @@ body
   margin 0
   height 100vh
   word-spacing 0.05em
+  line-height 1.5
   // color #34495e
   // -webkit-font-smoothing auto
   // overflow-y scroll
@@ -66,8 +67,8 @@ p
 
 .cube
   position relative
-  margin 10px auto
   text-align center
+  margin 10px auto
   padding 10px
   transition .3s cubic-bezier(.25,.8,.25,1)
 
