--- a/client/app.styl
+++ b/client/app.styl
@@ -75,12 +75,11 @@ p
 select
 	appearance none
 	background-color transparent
-	border .1rem solid #d1d1d1
-	border-radius 2px
-	box-shadow none
+	border 1px solid #dddfe2
+	border-radius 1px
 	box-sizing inherit
 	height 2.4rem
-	padding 0 1.0rem // The .6rem vertically centers text on FF, ignored by Webkit
+	padding 0 .5rem // The .6rem vertically centers text on FF, ignored by Webkit
 	width 100%
 
 	&:focus
