--- a/client/app.styl
+++ b/client/app.styl
@@ -20,11 +20,12 @@ body
   font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   text-rendering optimizeLegibility
   font-size 14px
-  background-color lighten(#eceef1, 30%)
+  background-color #fafafa
   margin 0
   word-spacing 0.05em
   line-height 1.5
   -webkit-font-smoothing auto
+  // background-color lighten(#eceef1, 30%)
   // color #34495e
   // overflow-y scroll
 
