--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,6 +27,7 @@ html
     link(rel='shortcut icon', id="ico")
     
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
   body
     //- include partials/header
 
