use contenthash for webpack extract css

--- a/client/app.styl
+++ b/client/app.styl
@@ -161,7 +161,7 @@ $media-breakpoints := {
   xl-only: "only screen and (min-width: %s)" % $device-breakpoints.xl
 }
 
-@media $media-breakpoints.sm-and-down
+@media $media-breakpoints.xs-only
   .toolbar
     .btn--icon
       width 27px
