--- a/client/app.styl
+++ b/client/app.styl
@@ -24,7 +24,6 @@ body
   word-spacing 0.05em
   line-height 1.5
   -webkit-font-smoothing auto
-  background-color hsl(220, 13%, 18%)
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
@@ -64,6 +63,8 @@ p
       .input-group__selections__comma
         font-size 13px !important
 
+// .application--light
+//   background-color #fff
 
 .application--dark
   // background-color hsl(220, 13%, 18%)
