--- a/client/app.styl
+++ b/client/app.styl
@@ -97,7 +97,7 @@ p
   padding 10px
   transition .3s cubic-bezier(.25,.8,.25,1)
 
-  &[edit]:hover:after
+  &[edit].hover:after
     border 1px dotted #03a9f4 !important
 
   &[active]:after
