--- a/client/app.styl
+++ b/client/app.styl
@@ -101,12 +101,12 @@ p
     border 1px dotted #03a9f4 !important
 
   &[active]:after
-    border 1px dashed rgba(0,0,0,.5) !important
+    border 1px dotted rgba(0,0,0,.5) !important
 
 .application--dark
   .cube
     &[active]:after
-      border 1px dashed #4FFBFF !important
+      border 1px dotted #4FFBFF !important
 
 
 select
