add  select, checkbox, radio button

--- a/client/app.styl
+++ b/client/app.styl
@@ -115,8 +115,7 @@ select
 	border 1px solid #dddfe2
 	border-radius 1px
 	box-sizing inherit
-	height 2.4rem
-	padding 0 .5rem // The .6rem vertically centers text on FF, ignored by Webkit
+	padding 8px
 	width 100%
 
 	&:focus
