--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,7 @@ html
     
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/css/font.css', rel='stylesheet')
   body
     //- include partials/header
 
