--- a/client/app.styl
+++ b/client/app.styl
@@ -17,13 +17,13 @@
 @require './app.css'
 
 body
-  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+  font-family -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue", "HelveticaNeue", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", sans-serif
   text-rendering optimizeLegibility
   font-size 14px
   margin 0
   word-spacing 0.05em
   line-height 1.5
-  -webkit-font-smoothing auto
+  //-webkit-font-smoothing auto
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
