--- a/client/app.css
+++ b/client/app.css
@@ -1,5 +1,5 @@
 select {
-  box-shadow: inset -1px 1px 2px rgba(0,0,0,.1);
+  /*box-shadow: inset -1px 1px 2px rgba(0,0,0,.1);*/
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="#d1d1d1" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>') center right no-repeat;
   padding-right: 1.0rem;
 }
