--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html
     //- link(rel='shortcut icon', href='http://www.favicon.cc/favicon/886/702/favicon.png')
     link(rel='shortcut icon', id="ico")
     
-    link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
     link(href='/css/font.css', rel='stylesheet')
   body
