--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,11 +29,11 @@ html
     link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
     link(href='/css/font.css', rel='stylesheet')
+    style {{ style }}
   body
     //- include partials/header
-
-    include partials/flash
-    block content
+    //-include partials/flash
+    //-block content
     <!--vue-ssr-outlet-->
 
     //- include partials/footer
