--- a/client/app.styl
+++ b/client/app.styl
@@ -119,6 +119,9 @@ select
 
 .application--dark
   .cube
+    &[edit].hover:after
+      border 1px dotted #03a9f4 !important
+
     &[active]:after
       border 1px dotted #4FFBFF !important
 
