css module compose

--- a/client/app.styl
+++ b/client/app.styl
@@ -56,6 +56,13 @@ select
 *::selection
   background rgba(78,188,221,0.15)
 
+.hover:after
+  border 1px dotted #03a9f4 !important
+
+.application--dark
+  .hover:after
+    border 1px dotted #03a9f4 !important
+
 // .cube
 //   position relative
 //   text-align center
