--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,7 +33,7 @@ html
   body
     //- include partials/header
     //-include partials/flash
-    //-block content
+    block content
     <!--vue-ssr-outlet-->
 
     //- include partials/footer
