heroku release version

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,7 +28,7 @@ html
     
     link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/css/font.css', rel='stylesheet')
+    link(href='/css/font.css?v={{ver}}', rel='stylesheet')
     style {{ style }}
   body
     //- include partials/header
