--- a/views/layout.pug
+++ b/views/layout.pug
@@ -42,6 +42,7 @@ html
     //- script(src='/js/lib/bootstrap.min.js')
     
     //{{ heroku_ver }} - {{ travis_job }}
+    //{{ now_id }} - {{ now_url }} - {{ now_region }} - {{ now_plan }}
     
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
