--- a/client/app.styl
+++ b/client/app.styl
@@ -12,14 +12,13 @@
 //
 // $font-size-root := 14px
 
-// @require '../node_modules/vuetify/src/stylus/main'
-// @require '../node_modules/vuetify/dist/vuetify.min.css'
 @require './app.css'
 
 body
   font-family -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue", "HelveticaNeue", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", sans-serif
   text-rendering optimizeLegibility
   font-size 14px
+  color: rgba(0,0,0,.87)
   margin 0
   word-spacing 0.05em
   line-height 1.5
@@ -27,7 +26,6 @@ body
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
-  // overflow-y scroll
 
 a
   text-decoration none
@@ -51,7 +49,6 @@ select
 
 	&:focus
 		outline 0
-    // border-color #666
 
 *::selection
   background rgba(78,188,221,0.15)
@@ -63,26 +60,7 @@ select
   .hover:after
     border 1px dotted #03a9f4 !important
 
-.application
-  .list__tile__title
-  .theme--light.navigation-drawer
-  .theme--light.navigation-drawer .list
-    color rgb(66, 66, 65)
-
-  .menu__content--select
-    .list__tile
-      height 32px
-      padding 0 10px
-      font-size 13px !important
-
-.application--light
-  // background-color #fff
-  .navigation-drawer--right
-    background-color #fafafa
-
 .application--dark
-  // background-color hsl(220, 13%, 18%)
-  // color hsl(220, 14%, 71%)
   *::selection
     background #2C93FA
     color #fff
@@ -94,58 +72,8 @@ select
     &:focus
       color #fff
 
-  .list__tile__title
-    color #fff
-
 .fade-enter-active, .fade-leave-active
   transition all .2s ease
 
 .fade-enter, .fade-leave-active
   opacity 0
-
-// * -16px on Desktop
-// phone     Extra small	 xs	 small to large handset	   < 600px
-// tablet    Small	       sm	 small to medium tablet	   600px > < 960px
-// laptop    Medium	       md	 large tablet to laptop	   960px > < 1264*
-// desktop   Large	       lg	 desktop	                 1264 > < 1904px*
-// tv        Extra large   xl	 4k and ultra-wides	       > 1904px*
-$device-breakpoints := {
-  xs: 0
-  sm: 600px
-  md: 960px
-  lg: (1280px - 16px) // Desktop gets a 16dp reduction
-  xl: (1920px - 16px) // https://material.io/guidelines/layout/responsive-ui.html#responsive-ui-breakpoints
-}
-
-$media-breakpoints := {
-  xs-only: "only screen and (max-width: %s)" % ($device-breakpoints.sm - 1)
-  sm-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.sm ($device-breakpoints.md  - 1))
-  sm-and-down: "only screen and (max-width: %s)" % ($device-breakpoints.md - 1)
-  sm-and-up: "only screen and (min-width: %s)" % $device-breakpoints.sm
-  md-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.md ($device-breakpoints.lg  - 1))
-  md-and-down: "only screen and (max-width: %s )" % ($device-breakpoints.lg - 1)
-  md-and-up: "only screen and (min-width: %s)" % $device-breakpoints.md
-  lg-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.lg ($device-breakpoints.xl - 1))
-  lg-and-down: "only screen and (max-width: (%s - 1))" % $device-breakpoints.xl
-  lg-and-up: "only screen and (min-width: %s)" % $device-breakpoints.lg
-  xl-only: "only screen and (min-width: %s)" % $device-breakpoints.xl
-}
-
-@media $media-breakpoints.xs-only
-  .toolbar
-    .btn--icon
-      width 27px
-      height 27px
-      margin 4px
-
-// @media $media-breakpoints.lg-and-down
-//   .canvas
-//     margin-left 0
-//     margin-right 0
-
-// @media $media-breakpoints.lg-and-up
-//   .drawer .canvas
-//     margin-left 300px
-//
-//   .drawerRight .canvas
-//     margin-right 28em
