** Big update ** ### Remove styles

--- a/client/app.styl
+++ b/client/app.styl
@@ -18,11 +18,11 @@ body
   font-family -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue", "HelveticaNeue", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", sans-serif
   text-rendering optimizeLegibility
   font-size 14px
-  color: rgba(0,0,0,.87)
-  margin 0
-  word-spacing 0.05em
   line-height 1.5
-  //-webkit-font-smoothing auto
+  word-spacing 0.05em
+  color rgba(0,0,0,.87)
+  margin 0
+  -webkit-font-smoothing antialiased
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
