--- a/client/app.styl
+++ b/client/app.styl
@@ -22,7 +22,7 @@ body
   word-spacing 0.05em
   color rgba(0,0,0,.87)
   margin 0
-  -webkit-font-smoothing antialiased
+  // -webkit-font-smoothing antialiased
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
