--- a/client/app.styl
+++ b/client/app.styl
@@ -21,7 +21,7 @@ body
   line-height 1.5
   word-spacing 0.05em
   color rgba(0,0,0,.87)
-  // -webkit-font-smoothing antialiased
+  -webkit-font-smoothing antialiased
   // background-color #fafafa
   // background-color lighten(#eceef1, 30%)
   // color #34495e
