--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title {{ title }}
+    title #{title} - Cube
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='mobile-web-app-capable', content='yes')
@@ -21,25 +21,26 @@ html
     //- link(rel='apple-touch-icon', href='/logo/logo-120.png')
     //- link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
     //- link(rel='manifest', href='/manifest.json')
-    //- link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='/css/main.css')
     
     //- link(rel='shortcut icon', href='http://www.favicon.cc/favicon/886/702/favicon.png')
     link(rel='shortcut icon', id="ico")
     
-    link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
-    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/css/font.css', rel='stylesheet')
-    style {{ style }}
+    //- link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
+    //- link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
+    //- link(href='/css/font.css', rel='stylesheet')
   body
-    //- include partials/header
-    //-include partials/flash
-    block content
-    <!--vue-ssr-outlet-->
+    include partials/header
 
-    //- include partials/footer
+    .container
+      include partials/flash
+      block content
+    
+    include partials/footer
         
-    //- script(src='/js/lib/jquery-3.1.1.min.js')
-    //- script(src='/js/lib/bootstrap.min.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js')
+
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     
     //- Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
