--- a/views/template.pug
+++ b/views/template.pug
@@ -1,2 +1,51 @@
-extends layout
-block content
+doctype html
+html
+  head
+    title {{ title }}
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='mobile-web-app-capable', content='yes')
+    //- meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='theme-color' content='#4DA5F4')
+    meta(name='csrf-token', content=_csrf)
+      
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no')
+    meta(name='mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style', content='black')
+    meta(name='format-detection', content='telephone=no')
+      
+    //- meta(name='theme-color', content='#f60')
+    
+    //- link(rel='icon', href='/logo/logo-120.png')
+    //- link(rel='apple-touch-icon', href='/logo/logo-120.png')
+    //- link(rel='shortcut icon', sizes='48x48', href='/logo/logo-48.png')
+    //- link(rel='manifest', href='/manifest.json')
+    //- link(rel='stylesheet', href='/css/main.css')
+    
+    //- link(rel='shortcut icon', href='http://www.favicon.cc/favicon/886/702/favicon.png')
+    link(rel='shortcut icon', id="ico")
+    
+    link(href='https://fonts.googleapis.com/css?family=Material+Icons', rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/css/font.css', rel='stylesheet')
+    style {{ style }}
+  body
+    //- include partials/header
+    //-include partials/flash
+    block content
+    <!--vue-ssr-outlet-->
+
+    //- include partials/footer
+        
+    //- script(src='/js/lib/jquery-3.1.1.min.js')
+    //- script(src='/js/lib/bootstrap.min.js')
+    
+    //- Google Analytics: change UA-XXXXX-X to be your site's ID
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-104084818-1', 'auto');
+      ga('send', 'pageview');
