--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,7 +36,7 @@ html
       include partials/flash
       block content
     
-    include partials/footer
+    //- include partials/footer
         
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js')
 
