--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -11,13 +11,13 @@
         | cube
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=(title == 'Home') ? 'active' : undefined)
+        //- li(class=(title == 'Home') ? 'active' : undefined)
           a(href='/') Home
-        li
+        //- li
           a(href='/pricing') Pricing
-        li(class=(title == 'API Examples') ? 'active' : undefined)
+        //- li(class=(title == 'API Examples') ? 'active' : undefined)
           a(href='/api') API Examples
-        li(class=(title == 'Contact') ? 'active' : undefined)
+        //- li(class=(title == 'Contact') ? 'active' : undefined)
           a(href='/contact') Contact
         //- li
         //-   a(href='/status') Status
