--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -24,13 +24,13 @@ block content
         hr
     .form-group
       .col-sm-offset-3.col-sm-7
-        a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
-          i.fa.fa-facebook
-          | Sign in with Facebook
         a.btn.btn-block.btn-twitter.btn-social(href='/auth/twitter')
           i.fa.fa-twitter
           | Sign in with Twitter
-        a.btn.btn-block.btn-google.btn-social(href='/auth/google')
+        //- a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
+          i.fa.fa-facebook
+          | Sign in with Facebook
+        //- a.btn.btn-block.btn-google.btn-social(href='/auth/google')
           i.fa.fa-google-plus
           | Sign in with Google
         //- a.btn.btn-block.btn-github.btn-social(href='/auth/github')
